<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="app.shouoff.login.Login">

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding10"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/backarrow"
            android:layout_width="@dimen/margin22"
            android:layout_height="@dimen/margin22"
            android:layout_gravity="center_vertical"
            android:src="@drawable/back_arrow"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin10"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="@dimen/toolbar_text" />

    </LinearLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linear1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin8"
            android:orientation="vertical"
            android:paddingBottom="@dimen/margin8"
            android:paddingStart="@dimen/padding20"
            android:paddingEnd="@dimen/margin20">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/step_1_your_basic_details"
                android:textColor="@color/app_color"
                android:textSize="@dimen/heading_text"/>

            <LinearLayout
                android:id="@+id/linear2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin5"
                android:layout_marginRight="@dimen/margin5"
                android:layout_marginTop="@dimen/margin10"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:textColorHint="@color/app_color"
                    app:hintTextAppearance="@style/TextLabel">

                    <EditText
                        android:id="@+id/name"
                        style="@style/edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/normal_text"
                        tools:ignore="LabelFor" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Optional"
                    android:textSize="@dimen/short_text_9"
                    android:textColor="@color/gray_number"
                    android:layout_gravity="end"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/family_name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin3"
                    android:hint="@string/last_name"
                    android:textColorHint="@color/app_color"
                    app:hintTextAppearance="@style/TextLabel">

                    <EditText
                        android:id="@+id/family_name"
                        style="@style/edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/normal_text"
                        tools:ignore="LabelFor" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Optional"
                    android:textSize="@dimen/short_text_9"
                    android:textColor="@color/gray_number"
                    android:layout_gravity="end"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/dob_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin3"
                    android:hint="@string/date_of_birth"
                    android:textColorHint="@color/app_color"
                    app:hintTextAppearance="@style/TextLabel">

                    <EditText
                        android:id="@+id/date_of_birth"
                        style="@style/edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:editable="false"
                        android:focusableInTouchMode="false"
                        android:inputType="date"
                        android:textSize="@dimen/normal_text"
                        tools:ignore="LabelFor"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/nick_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin3"
                    android:hint="@string/tell_us_your_nick_name"
                    android:textColorHint="@color/app_color"
                    app:hintTextAppearance="@style/TextLabel">

                    <EditText
                        android:id="@+id/nick_name"
                        style="@style/edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/normal_text"
                        tools:ignore="LabelFor" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/gender_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin3"
                    android:hint="@string/gender"
                    android:textColorHint="@color/app_color"
                    app:hintTextAppearance="@style/TextLabel">

                    <AutoCompleteTextView
                        android:id="@+id/gender"
                        style="@style/edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/down_arrow"
                        android:dropDownHeight="@dimen/margin100"
                        tools:ignore="LabelFor" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/guardian_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin3"
                    android:hint="@string/guardian_name"
                    android:textColorHint="@color/app_color"
                    app:hintTextAppearance="@style/TextLabel">

                    <EditText
                        android:id="@+id/guardian_father_name"
                        style="@style/edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/normal_text"
                        tools:ignore="LabelFor" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/email_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin3"
                    android:hint="@string/guardian_e_mail"
                    android:textColorHint="@color/app_color"
                    app:hintTextAppearance="@style/TextLabel">

                    <EditText
                        android:id="@+id/email"
                        style="@style/edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:textSize="@dimen/normal_text"
                        tools:ignore="LabelFor" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/contact_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin3"
                    android:hint="@string/guardian_contact"
                    android:textColorHint="@color/app_color"
                    app:hintTextAppearance="@style/TextLabel">

                    <EditText
                        android:id="@+id/contact"
                        style="@style/edit_text"
                        android:maxLength="14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:textSize="@dimen/normal_text"
                        tools:ignore="LabelFor" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/next_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin30"
                android:layout_marginStart="@dimen/margin30"
                android:layout_marginTop="@dimen/margin15"
                android:background="@drawable/corner_background3"
                android:gravity="center"
                android:padding="@dimen/padding15"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="@dimen/normal_text" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>
