<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register_two"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.shouoff.login.RegisterTwo">

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding10"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/backarrow"
            android:layout_width="@dimen/margin22"
            android:layout_height="@dimen/margin22"
            android:layout_gravity="center_vertical"
            android:src="@drawable/back_arrow"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin10"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="@dimen/toolbar_text" />

    </LinearLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linear1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin8"
            android:orientation="vertical"
            android:paddingBottom="@dimen/margin8"
            android:paddingStart="@dimen/padding20"
            android:paddingEnd="@dimen/margin20">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/step_2_create_your_login_keys"
                android:textColor="@color/app_color"
                android:textSize="@dimen/heading_text" />

            <LinearLayout
                android:id="@+id/linear2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin5"
                android:layout_marginRight="@dimen/margin5"
                android:layout_marginTop="@dimen/margin8"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/game_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin3"
                    android:hint="@string/sports"
                    android:textColorHint="@color/app_color"
                    app:hintTextAppearance="@style/TextLabel">

                    <MultiAutoCompleteTextView
                        android:id="@+id/game_select"
                        style="@style/edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/down_arrow"
                        android:dropDownHeight="@dimen/margin160"
                        android:inputType="textMultiLine"
                        android:singleLine="false"
                        tools:ignore="LabelFor" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/other_game_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin3"
                    android:hint="@string/your_favourite_sports"
                    android:textColorHint="@color/app_color"
                    android:visibility="gone"
                    app:hintTextAppearance="@style/TextLabel">

                    <EditText
                        android:id="@+id/other_game_name"
                        style="@style/edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:textSize="@dimen/normal_text"
                        tools:ignore="LabelFor" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/country_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin3"
                    android:hint="@string/country"
                    android:textColorHint="@color/app_color"
                    app:hintTextAppearance="@style/TextLabel">

                    <AutoCompleteTextView
                        android:id="@+id/country"
                        style="@style/edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/down_arrow"
                        android:dropDownHeight="@dimen/margin160"
                        tools:ignore="LabelFor" />

                </android.support.design.widget.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin3">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/city_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/city"
                        android:textColorHint="@color/app_color"
                        app:hintTextAppearance="@style/TextLabel">

                        <AutoCompleteTextView
                            android:id="@+id/city"
                            style="@style/edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableEnd="@drawable/down_arrow"
                            android:dropDownHeight="@dimen/margin160"
                            tools:ignore="LabelFor" />

                    </android.support.design.widget.TextInputLayout>

                    <ProgressBar
                        android:id="@+id/progress_city"
                        android:layout_width="@dimen/margin15"
                        android:layout_height="@dimen/margin15"
                        android:layout_centerHorizontal="true"
                        android:visibility="gone" />

                </RelativeLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/user_name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_username"
                    android:textColorHint="@color/app_color"
                    app:hintTextAppearance="@style/TextLabel">

                    <EditText
                        android:id="@+id/username"
                        style="@style/edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/normal_text"
                        tools:ignore="LabelFor" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin5"
                    android:hint="@string/create_new_password"
                    android:textColorHint="@color/app_color"
                    app:hintTextAppearance="@style/TextLabel">

                    <EditText
                        android:id="@+id/password"
                        style="@style/edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textSize="@dimen/normal_text"
                        tools:ignore="LabelFor" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/confirm_pass_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin5"
                    android:hint="@string/confirm_password"
                    android:textColorHint="@color/app_color"
                    app:hintTextAppearance="@style/TextLabel">

                    <EditText
                        android:id="@+id/confirm_password"
                        style="@style/edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textSize="@dimen/normal_text"
                        tools:ignore="LabelFor" />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_marginBottom="@dimen/margin10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin5"
                    android:orientation="horizontal">

                    <CheckBox
                        android:layout_gravity="center"
                        android:id="@+id/terms"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/small_text" />

                    <TextView
                        android:id="@+id/checktext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin5"
                        android:textSize="@dimen/normal_text" />
                </LinearLayout>

            </LinearLayout>
            <TextView
                android:id="@+id/submit_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin30"
                android:layout_marginStart="@dimen/margin30"
                android:layout_marginTop="@dimen/margin15"
                android:background="@drawable/corner_background3"
                android:gravity="center"
                android:padding="@dimen/padding15"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="@dimen/normal_text" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>
